# quill

./: .gitignore  DESIGN.md  NOTES.md  README.md  TODO.md  cabal.project  shell.nix
nix/: .gitignore  client
nix/projectEnv/: default.nix  nixpkgs.nix
quill/: CHANGELOG.md  TODO.md  quill.cabal
quill-backend-api/: Setup.hs  quill-backend-api.cabal
quill-backend-api-setup/: CHANGELOG.md  quill-backend-api-setup.cabal
quill-backend-api-setup/src/: Setup.hs
quill-backend-api/schemas/: request.capnp  response.capnp
quill-backend-postgres/: quill-backend-postgres.cabal
quill-plugin-api/: Setup.hs  quill-plugin-api.cabal
quill-plugin-api-setup/: quill-plugin-api.cabal
quill-plugin-api-setup/schemas/: request.capnp
quill-plugin-api-setup/src/: Setup.hs
quill-plugin-api/schemas/: migration.capnp  request.capnp  response.capnp  table.capnp
quill-plugin-postgres/: CHANGELOG.md  quill-plugin-postgres.cabal
quill-plugin-postgres/exe/: Main.hs
quill-plugin-postgres/src/: Main.hs
quill-plugin-postgres/src/Quill/Backend/: Postgres.hs
quill/exe/: Dummy.hs  Main.hs
quill/schemas/: .gitignore  request.capnp  response.capnp
quill/src/: Dummy.hs  Main.hs
quill/src/Data/Graph/: Extra.hs
quill/src/Data/Hashable/Lifted/: Orphans.hs
quill/src/Quill/: Backend.hs  Check.hs  Marshall.hs  Normalise.hs  Parser.hs  Query.hs  SQL.hs  Syntax.hs
quill/src/Quill/Check/: Migration.hs
quill/src/Quill/Parser/: Migration.hs
quill/src/Quill/SQL/: Migration.hs
quill/src/Quill/Syntax/: Migration.hs
quill/test/: Database.hs  Expectations.hs  Main.hs
quill/test/Test/: Check.hs  Compile.hs  Graph.hs  Migrate.hs  Parse.hs  Query.hs
quill/test/Test/Check/: Migration.hs
site/: default.nix  index.html  watch.sh
site/compiler/: compiler.cabal  compiler.nix  default.nix
site/css/: main.css
site/hakyll/: default.nix  site.hs  site.nix
site/src/: documentation.html  getting-started.html  index.html
site/src/css/: main.css
site/src/templates/: default.html
