cabal-version:       2.4

name:                quill-plugin-api-setup
version:             0.1.0.0
synopsis:            Setup functions for `quill-plugin-api`
-- description:
-- bug-reports:
license:             NONE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
-- copyright:
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Setup
  build-depends:       base ^>=4.12.0.0
                     , directory
                     , process
  build-tool-depends:  capnp:capnpc-haskell == 0.4.0.0
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010