cabal-version:       2.4
name:                quill-plugin-api
version:             0.1.0.0
synopsis:            API definition for Quill backend plugins
-- description:
-- bug-reports:
license:             NONE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
-- copyright:
category:            Language
extra-source-files:
  CHANGELOG.md,
  schemas/request.capnp,
  schemas/response.capnp

custom-setup
  setup-depends:
    Cabal >=2.4 && <3.0,
    base  ^>=4.12.0.0,
    directory,
    quill-plugin-api-setup

library
  exposed-modules:
                       Capnp.Gen.Migration
                     , Capnp.Gen.Migration.Pure
                     , Capnp.Gen.Response
                     , Capnp.Gen.Response.Pure
                     , Capnp.Gen.Request
                     , Capnp.Gen.Request.Pure
                     , Capnp.Gen.Table
                     , Capnp.Gen.Table.Pure
  other-modules:       
                       Capnp.Gen.ById.Xa3a72b9143c87ce3.Pure
                     , Capnp.Gen.ById.Xa3a72b9143c87ce3
                     , Capnp.Gen.ById.Xa3fb1aad7b12a786.Pure
                     , Capnp.Gen.ById.Xa3fb1aad7b12a786
                     , Capnp.Gen.ById.Xf9e99c62538eec08.Pure
                     , Capnp.Gen.ById.Xf9e99c62538eec08
                     , Capnp.Gen.ById.Xb95ef7fb3a9fb3ab.Pure
                     , Capnp.Gen.ById.Xb95ef7fb3a9fb3ab
  autogen-modules:
                       Capnp.Gen.Migration
                     , Capnp.Gen.Migration.Pure
                     , Capnp.Gen.Response
                     , Capnp.Gen.Response.Pure
                     , Capnp.Gen.Request
                     , Capnp.Gen.Request.Pure
                     , Capnp.Gen.Table
                     , Capnp.Gen.Table.Pure
                     , Capnp.Gen.ById.Xa3a72b9143c87ce3.Pure
                     , Capnp.Gen.ById.Xa3a72b9143c87ce3
                     , Capnp.Gen.ById.Xa3fb1aad7b12a786.Pure
                     , Capnp.Gen.ById.Xa3fb1aad7b12a786
                     , Capnp.Gen.ById.Xf9e99c62538eec08.Pure
                     , Capnp.Gen.ById.Xf9e99c62538eec08
                     , Capnp.Gen.ById.Xb95ef7fb3a9fb3ab.Pure
                     , Capnp.Gen.ById.Xb95ef7fb3a9fb3ab

  build-depends:       base ^>=4.12.0.0
                     , capnp == 0.4.0.0
  hs-source-dirs:      schemas
  ghc-options:         -Wall
  default-language:    Haskell2010